--- a/.github/workflows/staging_webapplication20231016154707(staging).yml
+++ b/.github/workflows/staging_webapplication20231016154707(staging).yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '3.1'
+          dotnet-version: '7.0.x'
           include-prerelease: true
 
       - name: Build with dotnet
@@ -55,3 +55,7 @@ jobs:
           slot-name: 'Staging'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9A169A1E82A44E779B824ED5DB995C0B }}
           package: .
+
+
+
+
